# autoria-parser

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: pipelines.py  settings.py  utils.py
app/commands/: exporter.py
app/database/: env.py
app/database/models/: car.py
app/database/models/mixins/: primary_key_mixin.py
app/database/versions/: 5b190d121761_added_cars_table.py  6d1fd49e8fb0_alter_phone_number_column.py
app/spiders/: autoria_serp_spider.py
pm2/: pm2.config.example.js
pm2/settings/: settings.js
src/: alembic.ini  items.py  settings.py
src/database/: env.py
src/database/models/: base.py  car.py
src/database/models/mixins/: __init__.py  timestamps_mixin.py
src/database/versions/: 5b190d121761_added_cars_table.py
src/spiders/: autoria_serp_spider.py
